--- a/views/agregar.hbs
+++ b/views/agregar.hbs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ava de Faye Jewelry | Home</title>
+		<title>Ava de Faye Jewelry | Add new product</title>
 			<link href="stylesheets/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 			<link href="stylesheets/style.css" rel="stylesheet" type="text/css" media="all" />
 	</head>
@@ -16,38 +16,17 @@
 <!-- empieza logo  -->
 
 	<div class="logo">
-		<a href="index.html"><h1>Ava de Faye | Jewelry</h1></a>
+		<a href="/"><h1>Ava de Faye | Jewelry</h1></a>
 	</div>
 
-<!-- empieza menu  -->
 
-	<div class="header">
-		<div class="container">
-			<div class="col-md-9 header-left">
-				<ul class="menu items">
-					<li><a href="index.html">Home</a>
-					</li>
-					<li><a href="views/comingsoon.hbs">Products</a>
-						<!-- proximamente products -->
-					</li>
-					<li><a href="comingsoon.html">Blog</a>
-						<!-- proximamente blog  -->
-					</li>
-					<li><a href="comingsoon.html">Contact</a>
-						<!-- proximamente contact -->
-					</li>
-				</ul>
-		</div>
-
-			<div class="col-md-3 header-right">
-				<div class="search-bar">
-					<input type="text" value="Search">
-					<input type="submit" value="">
-				</div>
-			</div>
-		</div>
-	</div>
-
+<div class="logout">
+	<div class="button" id="logout">
+		<a href="/">
+			 LOGOUT
+		 </a>
+		 </div>
+</div>
 
  <div class="addproduct">
    <h1>Agregar un producto</h1>
@@ -60,7 +39,18 @@
    <h3>Precio (solo el numero)
      <input id="product-price"></h3>
    <div class="button-wrapper">
-     <div class="button" id="send"> <a href="/"> SEND </a></div>
+     <div class="button" id="send">
+			 <!-- <a href="/">  -->
+				 SEND
+			 <!-- </a> -->
+		 </div>
+
+		 <div class="button-wrapper">
+			 <div class="button" id="home">
+				<a href="/">
+					Ir al index
+				</a>
+			</div>
  </div>
 </div>
 
