--- a/views/auth.hbs
+++ b/views/auth.hbs
@@ -3,7 +3,7 @@
  <head>
    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
    <meta charset="utf-8">
-   <title>hola </title>
+   <title>Ava de Faye Jewelry | Admin login</title>
  </head>
  <body>
    <nav>
@@ -14,7 +14,8 @@
     <input id="username" type="text" name="" value="">
     <h3>Password</h3>
     <input id="password" type="password" name="" value="">
-     <div class="button" id="send"> SEND </div>
+    <div class="button-wrapper">
+       <div class="button" id="validate"> SEND </div>
    </div>
  </div>
    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
