--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
 	<nav>
 
 		<div class="login">
-			<a href="/auth">Login</a>
+			<a href="/agregar">Admin options</a>
 		</div>
 
 		<div class="cart">
