--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,8 +35,8 @@
 <!-- empieza menu  -->
 
 	<div class="header">
-		<div class="container">
-			<div class="col-md-9 header-left">
+		<div class="menu-container">
+
 				<ul class="menu items">
 					<li><a href="/">Home</a>
 					</li>
@@ -50,7 +50,7 @@
 						<!-- proximamente contact -->
 					</li>
 				</ul>
-		</div>
+
 
 			<div class="col-md-3 header-right">
 				<div class="search-bar">
